# lab-01-types

./: .gcovr  .gitignore  CMakeLists.txt  README.md  meson.build  meson.options
.github/workflows/: CI.yml
sandbox/: meson.build
scripts/: asan.sh  coverage.sh  setup-all.sh  setup-toolchain.sh  sonarqube.sh  tests.sh  tsan.sh
scripts/cmake_based/: coverage.sh
sources/: meson.build
tests/: main.cpp  meson.build
